# web-scraper

./: README.md  pyproject.toml  wiki_data.txt
web_scraper/: scraper.py
